fix: indicator white space

--- a/src/components/unstyled/indicator.css
+++ b/src/components/unstyled/indicator.css
@@ -3,6 +3,6 @@
   width: max-content;
   & :where(.indicator-item) {
     z-index: 1;
-    @apply absolute transform;
+    @apply absolute transform whitespace-nowrap;
   }
 }
